<resources>
    <string name="app_name">day03_zuoye_one</string>
    <string name="login">登录</string>
    <string name="greek">GeekNews</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">数据智汇</string>
    <string name="v2ex">V2EX</string>
    <string name="collect">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="info">资讯</string>
    <string name="options">选项</string>
    <string name="sb">失败</string>
    <string name="cg">成功</string>
    <string name="dailyNews">日报</string>
    <string name="special">专栏</string>
    <string name="hot">热门</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zhuti">主题</string>

    <string name="day_name_format">EEE</string>
    <string name="invalid_date">日期选择必须在 %1$s 与 %2$s 之间.</string>
    <string name="month_only_name_format">MMMM</string>
    <string name="year_only_format">yyyy</string>
</resources>
